Added more features

--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
     <meta property="og:description" content="Investigate Concave Holes" />
 
   </head>
-  <body></body>
+  <body style="margin: 0px;"></body>
 </html>
