deploy: d2e69804147004a998c28415a32ec344047170de

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Investigate Concave Holes">
 
   
-<link rel="preload" href="/geometry/geometry-84aa98fd3eabeaf7_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/geometry/geometry-84aa98fd3eabeaf7.js"></head>
-  <body>
-<script type="module">import init from '/geometry/geometry-84aa98fd3eabeaf7.js';init('/geometry/geometry-84aa98fd3eabeaf7_bg.wasm');</script></body></html>
+<link rel="preload" href="/geometry/geometry-d90c545c317cf9a_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/geometry/geometry-d90c545c317cf9a.js"></head>
+  <body style="margin: 0px;">
+<script type="module">import init from '/geometry/geometry-d90c545c317cf9a.js';init('/geometry/geometry-d90c545c317cf9a_bg.wasm');</script></body></html>
