look and feel updates

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta property="og:url" content="https://wainwrightmark.github.io/geometry/" />
     <meta property="og:site_name" content="Geometry" />
     <meta property="og:description" content="Investigate Concave Holes" />
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
 
   </head>
-  <body style="margin: 0px;"></body>
+  <body ></body>
 </html>
