--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <meta property="og:url" content="https://wainwrightmark.github.io/geometry/">
     <meta property="og:site_name" content="Geometry">
     <meta property="og:description" content="Investigate Concave Holes">
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
 
   
-<link rel="preload" href="/geometry/geometry-d90c545c317cf9a_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/geometry/geometry-d90c545c317cf9a.js"></head>
-  <body style="margin: 0px;">
-<script type="module">import init from '/geometry/geometry-d90c545c317cf9a.js';init('/geometry/geometry-d90c545c317cf9a_bg.wasm');</script></body></html>
+<link rel="preload" href="/geometry/geometry-163b77871cc2fa87_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/geometry/geometry-163b77871cc2fa87.js"></head>
+  <body>
+<script type="module">import init from '/geometry/geometry-163b77871cc2fa87.js';init('/geometry/geometry-163b77871cc2fa87_bg.wasm');</script></body></html>
